--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,12 @@ dependencies {
     compile "org.springframework.boot:spring-boot-devtools:${springBootVersion}"
     compile "com.h2database:h2"
     compile "org.postgresql:postgresql:42.2.5"
+    compile('org.springframework.boot:spring-boot-starter-security')
 
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:2.21.0"
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.security:spring-security-test')
 }
 
 repositories {
