--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,9 +33,9 @@ jobs:
 
       #- run: echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin
 
-      - run: docker build -f ci-runner.docker -t aceleradoratw/esqueleto-ci-runner .
+      #- run: docker build -f ci-runner.docker -t aceleradoratw/esqueleto-ci-runner .
 
-      - run: docker push aceleradoratw/esqueleto-ci-runner
+      #- run: docker push aceleradoratw/esqueleto-ci-runner
 
   testes-funcionais:
     docker:
