@othman853: Divide configuracao da aplicacao por ambiente

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,9 @@ flyway {
 
 bootRun {
     sourceResources sourceSets.main
+    jvmArgs = [
+      '-Dspring.profiles.active=dev'
+    ]
 }
 
 build.mustRunAfter('clean')
