--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  datasource:
+    driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQL95Dialect
