--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,13 +39,13 @@ repositories {
 task startFromJar(type: Exec, dependsOn: assemble) {
     description = "Inicia aplicacao em plano de fundo, utilizando o jar gerado pela task :app:assemble"
 
-    commandLine "${rootDir}/scripts/local-test-server", "start", "$buildDir/libs/app.jar", "$buildDir"
+    commandLine "${rootDir}/scripts/local-test-server", "start", "$buildDir/libs/app.jar", "$buildDir", "dev"
 }
 
 task stopRunningJar(type: Exec) {
     description = "Para aplicacao que foi iniciada por :app:startFromJar"
 
-    commandLine "${rootDir}/scripts/local-test-server", "stop", "$buildDir/libs/app.jar", "$buildDir"
+    commandLine "${rootDir}/scripts/local-test-server", "stop", "$buildDir/libs/app.jar", "$buildDir", "dev"
 }
 
 bootRun {
