--- a/testes-funcionais/build.gradle
+++ b/testes-funcionais/build.gradle
@@ -1,20 +1,13 @@
-ext {
-    groupName = " >>> TESTES FUNCIONAIS"
+
+task npmInstall(type: Exec) {
+    inputs.file("package.json")
+
+    outputs.dir("node_modules")
+
+    commandLine 'npm', 'install', '--verbose'
 }
 
-task npmInstall(type: Exec, group: groupName) {
-    description = "Instala dependencias dos testes funcionais (se ja nao estiverem instaladas)."
-
-    def nodeModules = new File("$rootDir/testes-funcionais/node_modules")
-
-    if (nodeModules.exists()) {
-        commandLine 'printf', "\n >>> Cypress ja esta instalado, prosseguindo.\n"
-    } else {
-        commandLine 'npm', 'install', '--verbose'
-    }
-}
-
-task cypressRunLocal(type: Exec, dependsOn: ['npmInstall', ':app:startFromJar'], group: groupName) {
+task cypressRunLocal(type: Exec, dependsOn: ['npmInstall', ':scripts:dbSetup', ':scripts:startFromJar']) {
     description = "Executa os testes funcionais no ambiente local"
 
     environment 'CYPRESS_baseUrl', 'http://localhost:8080'
@@ -22,9 +15,9 @@ task cypressRunLocal(type: Exec, dependsOn: ['npmInstall', ':app:startFromJar'],
     commandLine 'npx', 'cypress', 'run'
 }
 
-cypressRunLocal.finalizedBy = [':app:stopRunningJar']
+cypressRunLocal.finalizedBy = [':scripts:stopRunningJar']
 
-task cypressOpen(type: Exec, dependsOn: ['npmInstall', ':app:assemble'], group: groupName) {
+task cypressOpen(type: Exec, dependsOn: 'npmInstall') {
     description = "Abre a interface grafica do Cypress"
 
     environment 'CYPRESS_baseUrl', 'http://localhost:8080'
