<@natymoraes, @diovanemendes> Configura para enviar email's

--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ spring:
     url: jdbc:postgresql://localhost:5432/hospebem
     username: postgres
     password: hospebem
+
+  mail:
+    properties:
+      mail:
+        debug: true
