--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -13,3 +13,18 @@ spring:
           lob:
             non_contextual_creation: true
 
+  mail:
+    default-encoding: UTF-8
+    host: smtp.gmail.com
+    username: ${EMAIL_USERNAME}
+    password: ${EMAIL_PASSWORD}
+    port: 587
+    properties:
+      mail:
+        debug: false
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+        transport:
+          protocol: smtp
