--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -16,8 +16,8 @@ spring:
   mail:
     default-encoding: UTF-8
     host: smtp.gmail.com
-    username: 'aceleradora14@gmail.com'
-    password: '@celer@dor@14'
+    username: ''
+    password: ''
     port: 587
     properties:
       mail:
